samples/_failures_safe/1761527567_f206b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c235fbcc.c: In function ‘main’:
./samples/SAFE/__tmp_c235fbcc.c:143:13: error: expected declaration or statement at end of input
  143 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_c235fbcc.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c235fbcc.c:143:13: error: expected declaration or statement at end of input
